--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "lib": "file:lib",
         "material-symbols": "^0.13.2",
         "react": "^18.2.0",
-        "react-bootstrap": "^2.9.1",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-tooltip": "^5.24.0"
     }
 }
